add cache to the module for set the outputs into the redis

--- a/zschedule.env
+++ b/zschedule.env
@@ -4,3 +4,4 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=gopy-art
 DATABASE_PASSWORD=P@ssw0rd
 DATABASE_NAME=zschedule
+CACHE_ADDRESS=redis://localhost:6379
